--- a/crypto/hw5/pkfernet.ipynb
+++ b/crypto/hw5/pkfernet.ipynb
@@ -146,7 +146,7 @@
     "        \n",
     "        # sign if necessary using static sender's private key\n",
     "        if sign_also:\n",
-    "            sender_private_key = load_pem_private_key(private_keyring[sender_sign_header])\n",
+    "            sender_private_key = load_pem_private_key(self.priv_keyring[sender_sign_header])\n",
     "            # TODO: PARSE HEADER TO DECIDE WHICH ALG TO USE HERE\n",
     "            signer = sender_private_key.signer(asym.ec.ECDSA(hashes.SHA256()))\n",
     "            signer.update(msg)\n",
@@ -157,13 +157,19 @@
     "        f2_ctxt = fern.encrypt(msg, adata) # MUST DECODE ADATA?\n",
     "        \n",
     "        # TODO: MAKE URL SAFE \n",
-    "        return adata + \"|\" + alg_rec + \"|\" + ephem_public_key + \"|\" + f2_ctxt\n",
+    "        return adata + \"|\" + alg_ + \"|\" + ephem_public_key + \"|\" + f2_ctxt\n",
     "\n",
     "    def decrypt(ctx, sender_name, verfiy_also=True):\n",
     "        # use static private key for decryption\n",
     "        adata, enc_alg, rpk, f2_ctxt = ctx.split('|')\n",
     "        \n",
+    "        send_pub_key = self.pub_keyrings[sender_name]\n",
+    "        # TODO: parse header and decide which algorithm, double check shared key and fernet isntantiations\n",
+    "        shared_key = rpk.exchange(ec.ECDH(), send_pub_key)\n",
     "        \n",
+    "        fern = Fernet2(shared_key)\n",
+    "        msg = fern.decrypt(ctx, associated_data=adata)\n",
+    "            \n",
     "        '''\n",
     "        enc_priv_key.decrypt(\n",
     "            ctx,\n",
