verify signature logic

--- a/crypto/hw5/pkfernet.ipynb
+++ b/crypto/hw5/pkfernet.ipynb
@@ -169,7 +169,15 @@
     "        \n",
     "        fern = Fernet2(shared_key)\n",
     "        msg = fern.decrypt(ctx, associated_data=adata)\n",
+    "        \n",
+    "        if verify_also:\n",
+    "            msg, sig = msg.split('|')\n",
+    "            rpk.verifier(sig, asym.ec.ECDSA(hashes.SHA256()))\n",
+    "            verifier.update(msg)\n",
+    "            verifier.verify() # throws error if verify is false\n",
     "            \n",
+    "        return msg\n",
+    "    \n",
     "        '''\n",
     "        enc_priv_key.decrypt(\n",
     "            ctx,\n",
