--- a/crypto/hw5/pkfernet.ipynb
+++ b/crypto/hw5/pkfernet.ipynb
@@ -117,7 +117,13 @@
     "        if overwrite is False:\n",
     "            assert receiver_name not in self.pub_keyrings, \"A public keyring already exists for this user, pass overwrite=True to update existing keyring\"\n",
     "        self.pub_keyrings[receiver_name] = receiver_public_keyring\n",
-    "        \n",
+    "      \n",
+    "    def parse_header(self, header):\n",
+    "        arr = header.split('_')\n",
+    "        new_header = header_ar[0] + '.' + header_ar[2]\n",
+    "        # returns alg, hash, key_param, ver, usage, key_type\n",
+    "        return new_header.split('.')\n",
+    "    \n",
     "    def encrypt(msg, receiver_name, receiver_enc_pub_key_alias, sender_sign_header, adata='', sign_also=True):\n",
     "        # ensure keyrings are populated with sender and receiver\n",
     "        assert receiver_name in self.pub_keyrings and sender_sign_header in self.priv_keyring, \"Keys must exist for both the sender and receiver to encrypt.\"\n",
@@ -164,6 +170,7 @@
     "        adata, enc_alg, rpk, f2_ctxt = ctx.split('|')\n",
     "        \n",
     "        send_pub_key = self.pub_keyrings[sender_name]\n",
+    "        \n",
     "        # TODO: parse header and decide which algorithm, double check shared key and fernet isntantiations\n",
     "        shared_key = rpk.exchange(ec.ECDH(), send_pub_key)\n",
     "        \n",
@@ -245,6 +252,57 @@
    "source": [
     "ephem_private_key = asym.dsa.generate_private_key(key_size=1024, backend=default_backend())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "header = \"ecdsa_with_sha256.secp224r1.1.sig.priv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ecdsa', 'sha256', 'secp224r1', '1', 'sig', 'priv']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse_header(header)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
