--- a/crypto/hw5/pkfernet.ipynb
+++ b/crypto/hw5/pkfernet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -60,31 +60,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "curve_switcher = {\n",
-    "    \"sec192r1\": asym.ec.SECP192R1,\n",
-    "    \"sec224r1\": asym.ec.SECP224R1,\n",
-    "    \"sec256k1\": asym.ec.SECP256K1,\n",
-    "    \"sec256r1\": asym.ec.SECP256R1,\n",
-    "    \"sec384r1\": asym.ec.SECP384R1,\n",
-    "    \"sec521r1\": asym.ec.SECP521R1,\n",
-    "    \"sec163k1\": asym.ec.SECT163K1,\n",
-    "    \"sec163r2\": asym.ec.SECT163R2,\n",
-    "    \"sec233k1\": asym.ec.SECT233K1,\n",
+    "alg_switcher = {\n",
+    "    \"ecdsa \": asym.ec.ECDSA,\n",
     "}\n",
     "\n",
-    "def get_curve(curve_alias):\n",
-    "    return curve_switcher.get(curve_alias)"
+    "curve_switcher = {\n",
+    "    \"sec192r1\": asym.ec.SECP192R1,\n",
+    "    \"secp192r1\": asym.ec.SECP192R1,    \n",
+    "    \"sec224r1\": asym.ec.SECP224R1,\n",
+    "    \"secp224r1\": asym.ec.SECP224R1,    \n",
+    "    \"sec256k1\": asym.ec.SECP256K1,\n",
+    "    \"secp256k1\": asym.ec.SECP256K1,\n",
+    "    \"sec256r1\": asym.ec.SECP256R1,\n",
+    "    \"secp256r1\": asym.ec.SECP256R1,\n",
+    "    \"sec384r1\": asym.ec.SECP384R1,\n",
+    "    \"secp384r1\": asym.ec.SECP384R1,\n",
+    "    \"sec521r1\": asym.ec.SECP521R1,\n",
+    "    \"secp521r1\": asym.ec.SECP521R1,\n",
+    "    \"sec163k1\": asym.ec.SECT163K1,\n",
+    "    \"sect163k1\": asym.ec.SECT163K1,\n",
+    "    \"sec163r2\": asym.ec.SECT163R2,\n",
+    "    \"sect163r2\": asym.ec.SECT163R2,\n",
+    "    \"sec233k1\": asym.ec.SECT233K1,\n",
+    "    \"sect233k1\": asym.ec.SECT233K1,\n",
+    "}\n",
+    "\n",
+    "hash_switcher = {\n",
+    "    \"sha256\": hashes.SHA256,\n",
+    "}\n",
+    "\n",
+    "header_to_alias_mapper = {\n",
+    "    \"ecdsa\": \"ecc\",\n",
+    "}\n",
+    "\n",
+    "def get_switch_case(switcher, key):\n",
+    "    return switcher.get(key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -120,12 +141,13 @@
     "      \n",
     "    def parse_header(self, header):\n",
     "        arr = header.split('_')\n",
-    "        new_header = header_ar[0] + '.' + header_ar[2]\n",
+    "        new_header = arr[0] + '.' + arr[2]\n",
     "        # returns alg, hash, key_param, ver, usage, key_type\n",
     "        return new_header.split('.')\n",
     "    \n",
     "    def encrypt(msg, receiver_name, receiver_enc_pub_key_alias, sender_sign_header, adata='', sign_also=True):\n",
     "        # ensure keyrings are populated with sender and receiver\n",
+    "        \n",
     "        assert receiver_name in self.pub_keyrings and sender_sign_header in self.priv_keyring, \"Keys must exist for both the sender and receiver to encrypt.\"\n",
     "        \n",
     "        alg, key_param, ver, usage, key_type = receiver_enc_pub_key_alias.split(\".\")\n",
@@ -135,7 +157,7 @@
     "        \n",
     "        # generate ephemeral private key based on the given algorithm\n",
     "        if alg == \"ecc\":\n",
-    "            curve = get_curve(key_param)\n",
+    "            curve = get_switch_case(curve_switcher, key_param)\n",
     "            ephem_priv_key = asym.ec.generate_private_key(curve(), default_backend())\n",
     "        elif alg == \"dsa\":\n",
     "            ephem_priv_key = asym.dsa.generate_private_key(key_size=key_param, backend=default_backend())\n",
@@ -163,16 +185,17 @@
     "        f2_ctxt = fern.encrypt(msg, adata) # MUST DECODE ADATA?\n",
     "        \n",
     "        # TODO: MAKE URL SAFE \n",
-    "        return adata + \"|\" + alg_ + \"|\" + ephem_public_key + \"|\" + f2_ctxt\n",
+    "        return adata + \"|\" + alg + \"|\" + ephem_public_key + \"|\" + f2_ctxt\n",
     "\n",
     "    def decrypt(ctx, sender_name, verfiy_also=True):\n",
     "        # use static private key for decryption\n",
     "        adata, enc_alg, rpk, f2_ctxt = ctx.split('|')\n",
     "        \n",
     "        send_pub_key = self.pub_keyrings[sender_name]\n",
+    "        rec_priv_key = load_pem_private_key(self.priv_keyring[enc_alg])\n",
     "        \n",
     "        # TODO: parse header and decide which algorithm, double check shared key and fernet isntantiations\n",
-    "        shared_key = rpk.exchange(ec.ECDH(), send_pub_key)\n",
+    "        shared_key = rpk.exchange(ec.ECDH(), rec_priv_key)\n",
     "        \n",
     "        fern = Fernet2(shared_key)\n",
     "        msg = fern.decrypt(ctx, associated_data=adata)\n",
@@ -222,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -264,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -275,7 +298,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "header_parsed = pf.parse_header(header)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "alias = '.'.join(get_switch_case(header_to_alias_matcher[header_parsed[0]]) + header_parsed[2]header_parsed[2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -283,26 +328,17 @@
     {
      "data": {
       "text/plain": [
-       "['ecdsa', 'sha256', 'secp224r1', '1', 'sig', 'priv']"
+       "'ecdsa.secp224r1.1.sig.priv'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parse_header(header)"
+    "alias"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
