header->alias, encryption fixes

--- a/crypto/hw5/pkfernet.ipynb
+++ b/crypto/hw5/pkfernet.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -15,28 +15,31 @@
     "from cryptography.hazmat.primitives import hashes\n",
     "from cryptography.hazmat.backends import default_backend\n",
     "import cryptography.hazmat.primitives.asymmetric as asym\n",
-    "from cryptography.hazmat.primitives.serialization import load_pem_private_key"
+    "from cryptography.hazmat.primitives.serialization import load_pem_private_key, load_pem_public_key\n",
+    "from cryptography.hazmat.primitives.serialization import Encoding as encoding, PublicFormat as public_format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "private_keyring = {\n",
-    "    \"ecc.sec241.1.enc.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMHcCAQEEIBYSJJDwaERSb8pvpUSmyzwokTT6bhomM1uX2T2+qQhToAoGCCqGSM49\\nAwEHoUQDQgAEw6pMRon2aMn9oNsPjcOfnRf/uEm7Ed64SIG+zSqvkdxPQxewBVLF\\nO+iP8UJGsm0rEx29wrCnaFCUpOxeLGQ0bA==\\n-----END EC PRIVATE KEY-----\\n\",\n",
-    "    \"ecc.sec241.1.sig.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMHcCAQEEIC4cxNRgrZOm8lPyDKUbn5Q1LbfK6lkGt+mmwgvyednUoAoGCCqGSM49\\nAwEHoUQDQgAEl1+7XxgkH0FwR/1WSnPFSPasQL3kj/XLxpbaCVCPhkQuRl7gddep\\nfjSVf4w/eh52HKHDoJVPVnwaXcpUeaixlQ==\\n-----END EC PRIVATE KEY-----\\n\",\n",
+    "    # TO\n",
+    "    \"ecc.sec224r1.1.sig.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMHcCAQEEIBYSJJDwaERSb8pvpUSmyzwokTT6bhomM1uX2T2+qQhToAoGCCqGSM49\\nAwEHoUQDQgAEw6pMRon2aMn9oNsPjcOfnRf/uEm7Ed64SIG+zSqvkdxPQxewBVLF\\nO+iP8UJGsm0rEx29wrCnaFCUpOxeLGQ0bA==\\n-----END EC PRIVATE KEY-----\\n\",\n",
+    "    \"ecc.sec241r1.1.enc.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMHcCAQEEIBYSJJDwaERSb8pvpUSmyzwokTT6bhomM1uX2T2+qQhToAoGCCqGSM49\\nAwEHoUQDQgAEw6pMRon2aMn9oNsPjcOfnRf/uEm7Ed64SIG+zSqvkdxPQxewBVLF\\nO+iP8UJGsm0rEx29wrCnaFCUpOxeLGQ0bA==\\n-----END EC PRIVATE KEY-----\\n\",\n",
+    "    \"ecc.sec241r1.1.sig.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMHcCAQEEIC4cxNRgrZOm8lPyDKUbn5Q1LbfK6lkGt+mmwgvyednUoAoGCCqGSM49\\nAwEHoUQDQgAEl1+7XxgkH0FwR/1WSnPFSPasQL3kj/XLxpbaCVCPhkQuRl7gddep\\nfjSVf4w/eh52HKHDoJVPVnwaXcpUeaixlQ==\\n-----END EC PRIVATE KEY-----\\n\",\n",
     "    \"rsa.2048.1.enc.priv\":\"<PEM encoded RSA PRIVATE KEY>\",\n",
     "    \"rsa.2048.1.sig.priv\":\"<PEM encoded RSA PRIVATE KEY>\"\n",
-    "}"
+    "} "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -44,23 +47,27 @@
    "source": [
     "public_keyrings = {\n",
     "    \"<group1-name>\": {\n",
-    "        \"ecc.sec224.1.enc.pub\": \"<ECC public key with sec224 curve>\",\n",
-    "        \"ecc.sec224.1.sig.pub\": \"ECC public key with sec224 curve\",\n",
+    "        \"ecc.sec224r1.1.enc.pub\": \"<ECC public key with sec224 curve>\",\n",
+    "        \"ecc.sec224r1.1.sig.pub\": \"ECC public key with sec224 curve\",\n",
     "        \"rsa.2048.1.enc.pub\": \"<PEM encoded RSA PUBLIC KEY>\",\n",
     "        \"Dsa.2048.1.sig.pub\": \"<PEM encoded DSA key (only good for sigining)>\",\n",
     "        \"rsa.2048.1.sig.pub\": \"<PEM encoded RSA PUBLIC KEY>\"\n",
     "    },\n",
     "    \"<group2-name>\": {\n",
-    "        \"ecc.sec224.1.enc.pub\": \"<ECC public key with sec224 curve>\",\n",
+    "        \"ecc.sec224r1.1.enc.pub\": \"<ECC public key with sec224 curve>\",\n",
     "        \"rsa.2048.1.sig.pub\": \"<PEM encoded RSA PUBLIC KEY>\",\n",
     "        \"dsa.1024.1.sig.pub\" : \"<PEM encoded DSA key (only good for signing)>\"\n",
+    "    }, \n",
+    "    \"asheesh_teja\": {\n",
+    "        \"dsa.1024.1.sig.pub\": \"-----BEGIN PUBLIC KEY-----\\nMIIBtzCCASsGByqGSM44BAEwggEeAoGBAK0wjowa0YhHl_wB8jgfN6sl4HeiCfSf\\nE99DY7McBs7Op9L8qMTQt151fiIcaaQeAOpzUqI6ofk-1iaSK0iKTQ63t9QLl1mz\\nbknp0vMny4IW2PqSkE14OZtqaDzRsWJqKAIb91BdKGyqdFNmRfHddpaPuDNawOge\\ng8yIe6P4QBN1AhUAnbg5PlIuvavIX2g_YIC9uGbm1xkCgYBW93q4kiXqdPki7a5j\\ngYSGD9uul58q6h361gl_BQcTwvf2VJioffL7HqfDS--jmS8_cZCJ3VPeXqUvDCOz\\nLKnwl9Fc3s7xG8Ks0R0PyLp3RikUKWv1CtT6GmS81JrzWvPrgKBWbIrIruddLtvb\\nFKX0l4BHV751QLLU7mmcPbcSFgOBhQACgYEAiKIEcb55nZF-_E38puoOeGqvv2sy\\nTnE9Prek5kpAzqA9Q9VT4m4SmKlFAbE6qC_7IxgQTjoKs301EZSWeA15z6vcnOo-\\nr-N5Z8Gn7qwJDzCL3NJpRhTQgBVL_Xh4xpJS-MM1EoEEqKBem8gCGFM-TGLdrx-K\\nMDbcPF_UfT46rY0=\\n-----END PUBLIC KEY-----\\n\", \n",
+    "        \"ecc.secp224r1.1.enc.pub\": \"-----BEGIN PUBLIC KEY-----\\nME4wEAYHKoZIzj0CAQYFK4EEACEDOgAElFmWnRvIgK53WG088jVdDFhMgvfP7SHS\\nNzPpLe4Y7NdvjawlwfTb5k3eIvT0hTRra431odw19fc=\\n-----END PUBLIC KEY-----\\n\"\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +103,7 @@
     "}\n",
     "\n",
     "header_to_alias_mapper = {\n",
-    "    \"ecdsa\": \"ecc\",\n",
+    "    \"ecdsa\": \"ecc\", \n",
     "}\n",
     "\n",
     "def get_switch_case(switcher, key):\n",
@@ -105,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -117,16 +124,16 @@
     "        self.priv_keyring = priv_keyring\n",
     "        self.pub_keyrings = public_keyrings\n",
     "    \n",
-    "    def url_safe_pem(pem_key):\n",
+    "    def url_safe_pem(self, pem_key):\n",
     "        key = re.findall(\"KEY-----\\n(.*)==\\n-----END\", pem_key, re.DOTALL)[0]\n",
     "#         key = re.findall(\"-----BEGIN EC PRIVATE KEY-----\\n(.*)==\\n-----END EC PRIVATE KEY-----\\n\", pem_key, re.DOTALL)[0]\n",
     "        key.replace(\"+\", \"-\").replace(\"/\", \"_\")\n",
     "        return key\n",
     "    \n",
-    "    def restore_pem(url_safe_pem):\n",
+    "    def restore_pem(self, url_safe_pem):\n",
     "        return url_safe_pem.replace(\"-\", \"+\").replace(\"_\", \"/\")\n",
     "    \n",
-    "    def export_pub_keys(key_alias_list=[]):\n",
+    "    def export_pub_keys(self, key_alias_list=[]):\n",
     "        if not key_alias_list:\n",
     "            return self.pub_keyrings\n",
     "        res = {}\n",
@@ -145,10 +152,19 @@
     "        # returns alg, hash, key_param, ver, usage, key_type\n",
     "        return new_header.split('.')\n",
     "    \n",
-    "    def encrypt(msg, receiver_name, receiver_enc_pub_key_alias, sender_sign_header, adata='', sign_also=True):\n",
+    "    def header_to_alias(self, header):\n",
+    "        alg, _, key_param, ver, usage, key_type = self.parse_header(header)\n",
+    "        alg = get_switch_case(header_to_alias_mapper, alg)\n",
+    "        if alg == \"ecc\":\n",
+    "            key_param = key_param[:3] + key_param[4:]\n",
+    "    \n",
+    "        alias = '.'.join([alg, key_param, ver, usage, key_type])\n",
+    "        return alias\n",
+    "    \n",
+    "    def encrypt(self, msg, receiver_name, receiver_enc_pub_key_alias, sender_sign_header, adata='', sign_also=True):\n",
     "        # ensure keyrings are populated with sender and receiver\n",
-    "        \n",
-    "        assert receiver_name in self.pub_keyrings and sender_sign_header in self.priv_keyring, \"Keys must exist for both the sender and receiver to encrypt.\"\n",
+    "#         and sender_sign_header in self.priv_keyring\n",
+    "        assert receiver_name in self.pub_keyrings, \"Keys must exist for both the sender and receiver to encrypt.\"\n",
     "        \n",
     "        alg, key_param, ver, usage, key_type = receiver_enc_pub_key_alias.split(\".\")\n",
     "#         alg_send, key_param_send, ver_send, usage_send, key_type_send = sender_sign_priv_key_alias.split(\".\")\n",
@@ -164,45 +180,53 @@
     "        elif alg == \"rsa\":\n",
     "            ephem_priv_key = asym.rsa.generate_private_key(public_exponent=65537, key_size=key_param, backend=default_backend())\n",
     "\n",
-    "        rec_pub_key = self.pub_keyrings[receiver_name]\n",
-    "        send_priv_key = self.priv_keyring[sender_sign_header]\n",
+    "        rec_pub_key = load_pem_public_key(self.pub_keyrings[receiver_name][receiver_enc_pub_key_alias], backend=default_backend())\n",
     "        ephem_public_key = ephem_priv_key.public_key()\n",
+    "        rpk = ephem_public_key.public_bytes(encoding.PEM, public_format.SubjectPublicKeyInfo)\n",
     "        \n",
     "        # PARSE HEADER TO DECIDE WHICH ALG TO USE HERE\n",
     "        # exchange using ephemeral private key and the receiver's public key   \n",
-    "        shared_key = ephem_priv_key.exchange(ec.ECDH(), rec_pub_key)\n",
+    "        shared_key = ephem_priv_key.exchange(asym.ec.ECDH(), rec_pub_key)\n",
     "        \n",
     "        # sign if necessary using static sender's private key\n",
     "        if sign_also:\n",
-    "            sender_private_key = load_pem_private_key(self.priv_keyring[sender_sign_header])\n",
+    "            send_priv_alias = self.header_to_alias(sender_sign_header)\n",
+    "            send_priv_key = load_pem_private_key(self.priv_keyring[send_priv_alias], password=None, backend=default_backend())\n",
     "            # TODO: PARSE HEADER TO DECIDE WHICH ALG TO USE HERE\n",
-    "            signer = sender_private_key.signer(asym.ec.ECDSA(hashes.SHA256()))\n",
+    "            signer = send_priv_key.signer(asym.ec.ECDSA(hashes.SHA256()))\n",
     "            signer.update(msg)\n",
     "            signature = signer.finalize()\n",
     "            msg += \"|\" + signature\n",
-    "\n",
-    "        fern = Fernet2(shared_key)\n",
+    "        \n",
+    "        fern = Fernet2(urlsafe_b64encode(shared_key))\n",
     "        f2_ctxt = fern.encrypt(msg, adata) # MUST DECODE ADATA?\n",
     "        \n",
-    "        # TODO: MAKE URL SAFE \n",
-    "        return adata + \"|\" + alg + \"|\" + ephem_public_key + \"|\" + f2_ctxt\n",
+    "        # TODO: MAKE URL SAFE, base 64 encode alg    self.url_safe_pem(rpk)\n",
+    "        return adata + \"|\" + urlsafe_b64encode(alg) + \"|\" + rpk + \"|\" + f2_ctxt\n",
     "\n",
-    "    def decrypt(ctx, sender_name, verfiy_also=True):\n",
+    "    def decrypt(self, ctx, sender_name, verfiy_also=True):\n",
     "        # use static private key for decryption\n",
-    "        adata, enc_alg, rpk, f2_ctxt = ctx.split('|')\n",
+    "        adata, alg, rpk, f2_ctxt = ctx.split('|')\n",
     "        \n",
-    "        send_pub_key = self.pub_keyrings[sender_name]\n",
-    "        rec_priv_key = load_pem_private_key(self.priv_keyring[enc_alg])\n",
+    "        rec_priv_key = load_pem_private_key(self.priv_keyring[alg])\n",
     "        \n",
     "        # TODO: parse header and decide which algorithm, double check shared key and fernet isntantiations\n",
-    "        shared_key = rpk.exchange(ec.ECDH(), rec_priv_key)\n",
-    "        \n",
+    "        shared_key = rec_priv_key.exchange(asym.ec.ECDH(), rpk)\n",
+    "\n",
     "        fern = Fernet2(shared_key)\n",
     "        msg = fern.decrypt(ctx, associated_data=adata)\n",
     "        \n",
     "        if verify_also:\n",
     "            msg, sig = msg.split('|')\n",
-    "            rpk.verifier(sig, asym.ec.ECDSA(hashes.SHA256()))\n",
+    "            \n",
+    "            send_pub_keyring = self.pub_keyrings[sender_name]\n",
+    "            \n",
+    "            for pub_alias in send_pub_keyring:\n",
+    "                if alg in pub_alias and \"sig\" in pub_alias:\n",
+    "                    send_pub_key = load_pem_public_key(send_pub_keyring[pub_alias], backend=default_backend())\n",
+    "                    \n",
+    "            # ASSERT HERE\n",
+    "            send_pub_key.verifier(sig, asym.ec.ECDSA(hashes.SHA256()))\n",
     "            verifier.update(msg)\n",
     "            verifier.verify() # throws error if verify is false\n",
     "            \n",
@@ -245,7 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -260,20 +293,33 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ADATA|ZWNj|-----BEGIN PUBLIC KEY-----\\nME4wEAYHKoZIzj0CAQYFK4EEACEDOgAEUX7Ko8cjwDlLorUre+pEGOus6S1VaSff\\nPafQJZ0arTbhL/PobkFrLQ0XMrx9Zc0m4UoBNI8D+IE=\\n-----END PUBLIC KEY-----\\n|gSewybQhMzuzb0Ej49rdiV0DUcSEjLjgyxVdCCsoLslGjkFKVeFZ5F_-bbN4q6eMXWDzbKB6blaeFa6kq6gkbH9nVabZ8NHVb6sCeC0kdQAluFkJtLSRaapHAZ47vGD9z5hqCmgxH1anLqahfLugx5v3TsLakqzPJk-5IAeKZ4Fk'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "priv_key = load_pem_private_key(private_keyring[\"ecc.sec241.1.enc.priv\"], password=None, backend=default_backend())"
+    "pf.encrypt(\"MESSAGE\", \"asheesh_teja\", \"ecc.secp224r1.1.enc.pub\", \"ecdsa_with_sha256.secp224r1.1.sig.priv\", \"ADATA\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "ephem_private_key = asym.dsa.generate_private_key(key_size=1024, backend=default_backend())"
+    "#             asym.rsa.RSAPrivateKeyWithSerialization.private_bytes(encoding, format, encryption_algorithm)\n",
+    "#             private_bytes(encoding, format, encryption_algorithm)\n",
+    "#             asymmetric.rsa.RSAPrivateKeyWithSerialization[source]"
    ]
   },
   {
@@ -284,74 +330,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "header = \"ecdsa_with_sha256.secp224r1.1.sig.priv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "header_parsed = pf.parse_header(header)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "alias = '.'.join(get_switch_case(header_to_alias_matcher[header_parsed[0]]) + header_parsed[2]header_parsed[2:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ecdsa.secp224r1.1.sig.priv'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "alias"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#             asym.rsa.RSAPrivateKeyWithSerialization.private_bytes(encoding, format, encryption_algorithm)\n",
-    "#             private_bytes(encoding, format, encryption_algorithm)\n",
-    "#             asymmetric.rsa.RSAPrivateKeyWithSerialization[source]"
-   ]
   }
  ],
  "metadata": {
@@ -359,18 +337,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
   }
  },
  "nbformat": 4,
