--- a/crypto/hw5/pkfernet.ipynb
+++ b/crypto/hw5/pkfernet.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "import re\n",
     "import json\n",
     "from fernet2 import Fernet2 \n",
-    "from base64 import urlsafe_b64encode\n",
     "from cryptography.hazmat.primitives import hashes\n",
+    "from base64 import urlsafe_b64encode, urlsafe_b64decode\n",
     "from cryptography.hazmat.backends import default_backend\n",
     "import cryptography.hazmat.primitives.asymmetric as asym\n",
     "from cryptography.hazmat.primitives.serialization import load_pem_private_key, load_pem_public_key\n",
@@ -28,8 +28,8 @@
    "outputs": [],
    "source": [
     "private_keyring = {\n",
-    "    # TO\n",
-    "    \"ecc.sec224r1.1.sig.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMHcCAQEEIBYSJJDwaERSb8pvpUSmyzwokTT6bhomM1uX2T2+qQhToAoGCCqGSM49\\nAwEHoUQDQgAEw6pMRon2aMn9oNsPjcOfnRf/uEm7Ed64SIG+zSqvkdxPQxewBVLF\\nO+iP8UJGsm0rEx29wrCnaFCUpOxeLGQ0bA==\\n-----END EC PRIVATE KEY-----\\n\",\n",
+    "    # TODO: generate more keys for testing\n",
+    "    \"ecc.sec224r1.1.sig.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMGgCAQEEHK0oh58eH+eRVjxYW392npc7UXLaw/gG5PBiE9mgBwYFK4EEACGhPAM6\\nAAQcTVIMmHBr4f6U/VUcEHAyLEuVkT7scvTawC4uenDCboN7V8B+v65yxh2bh7z9\\nkGo63JYwdJkAqQ==\\n-----END EC PRIVATE KEY-----\",\n",
     "    \"ecc.sec241r1.1.enc.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMHcCAQEEIBYSJJDwaERSb8pvpUSmyzwokTT6bhomM1uX2T2+qQhToAoGCCqGSM49\\nAwEHoUQDQgAEw6pMRon2aMn9oNsPjcOfnRf/uEm7Ed64SIG+zSqvkdxPQxewBVLF\\nO+iP8UJGsm0rEx29wrCnaFCUpOxeLGQ0bA==\\n-----END EC PRIVATE KEY-----\\n\",\n",
     "    \"ecc.sec241r1.1.sig.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMHcCAQEEIC4cxNRgrZOm8lPyDKUbn5Q1LbfK6lkGt+mmwgvyednUoAoGCCqGSM49\\nAwEHoUQDQgAEl1+7XxgkH0FwR/1WSnPFSPasQL3kj/XLxpbaCVCPhkQuRl7gddep\\nfjSVf4w/eh52HKHDoJVPVnwaXcpUeaixlQ==\\n-----END EC PRIVATE KEY-----\\n\",\n",
     "    \"rsa.2048.1.enc.priv\":\"<PEM encoded RSA PRIVATE KEY>\",\n",
@@ -40,6 +40,38 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pr_kr = {    \n",
+    "    \"ecc.sec224r1.1.enc.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMGgCAQEEHIy9A0wpj7UR6+9FgGJiBe+FsR714WXFmB2DAiOgBwYFK4EEACGhPAM6\\nAAQ6wymm4zZWmmuAtaOvUd5vTik73HWRhH8SPGC+d5OaY05JGn4TkwWOEocuND0R\\nqPAixpCXusAMxw==\\n-----END EC PRIVATE KEY-----\",\n",
+    "    \"ecc.sec224r1.1.sig.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMGgCAQEEHKDxHuvyYU93h7YxWekVhwfB3CvKvbPGS1YL95+gBwYFK4EEACGhPAM6\\nAARa+QRxUyLy1XrpuPuuqA6rx06XsHlZZl2Yl3+hEG0eGMsHDIQtesVhhrZu6guB\\no/i2yH/0k6Gw9A==\\n-----END EC PRIVATE KEY-----\"\n",
+    "#     \"dsa.1024.1.sig.pub\":\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pu_kr = {\n",
+    "    \"dan\": {\n",
+    "        \"ecc.sec224r1.1.enc.pub\": \"-----BEGIN PUBLIC KEY-----\\nME4wEAYHKoZIzj0CAQYFK4EEACEDOgAEOsMppuM2VpprgLWjr1Heb04pO9x1kYR/\\nEjxgvneTmmNOSRp+E5MFjhKHLjQ9EajwIsaQl7rADMc=\\n-----END PUBLIC KEY-----\",\n",
+    "        \"ecc.sec224r1.1.sig.pub\": \"-----BEGIN PUBLIC KEY-----\\nME4wEAYHKoZIzj0CAQYFK4EEACEDOgAEWvkEcVMi8tV66bj7rqgOq8dOl7B5WWZd\\nmJd/oRBtHhjLBwyELXrFYYa2buoLgaP4tsh/9JOhsPQ=\\n-----END PUBLIC KEY-----\"\n",
+    "#         \"dsa.1024.1.sig.pub\":\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +158,6 @@
     "    \n",
     "    def url_safe_pem(self, pem_key):\n",
     "        key = re.findall(\"KEY-----\\n(.*)==\\n-----END\", pem_key, re.DOTALL)[0]\n",
-    "#         key = re.findall(\"-----BEGIN EC PRIVATE KEY-----\\n(.*)==\\n-----END EC PRIVATE KEY-----\\n\", pem_key, re.DOTALL)[0]\n",
     "        key.replace(\"+\", \"-\").replace(\"/\", \"_\")\n",
     "        return key\n",
     "    \n",
@@ -179,19 +210,20 @@
     "            ephem_priv_key = asym.dsa.generate_private_key(key_size=key_param, backend=default_backend())\n",
     "        elif alg == \"rsa\":\n",
     "            ephem_priv_key = asym.rsa.generate_private_key(public_exponent=65537, key_size=key_param, backend=default_backend())\n",
-    "\n",
-    "        rec_pub_key = load_pem_public_key(self.pub_keyrings[receiver_name][receiver_enc_pub_key_alias], backend=default_backend())\n",
+    "            \n",
+    "        rec_pub_key = load_pem_public_key(bytes(self.pub_keyrings[receiver_name][receiver_enc_pub_key_alias]), backend=default_backend())\n",
     "        ephem_public_key = ephem_priv_key.public_key()\n",
     "        rpk = ephem_public_key.public_bytes(encoding.PEM, public_format.SubjectPublicKeyInfo)\n",
-    "        \n",
-    "        # PARSE HEADER TO DECIDE WHICH ALG TO USE HERE\n",
+    "        # TODO: PARSE HEADER TO DECIDE WHICH ALG TO USE HERE\n",
     "        # exchange using ephemeral private key and the receiver's public key   \n",
     "        shared_key = ephem_priv_key.exchange(asym.ec.ECDH(), rec_pub_key)\n",
+    "        \n",
+    "        print urlsafe_b64encode(shared_key)        \n",
     "        \n",
     "        # sign if necessary using static sender's private key\n",
     "        if sign_also:\n",
     "            send_priv_alias = self.header_to_alias(sender_sign_header)\n",
-    "            send_priv_key = load_pem_private_key(self.priv_keyring[send_priv_alias], password=None, backend=default_backend())\n",
+    "            send_priv_key = load_pem_private_key(bytes(self.priv_keyring[send_priv_alias]), password=None, backend=default_backend())\n",
     "            # TODO: PARSE HEADER TO DECIDE WHICH ALG TO USE HERE\n",
     "            signer = send_priv_key.signer(asym.ec.ECDSA(hashes.SHA256()))\n",
     "            signer.update(msg)\n",
@@ -204,17 +236,30 @@
     "        # TODO: MAKE URL SAFE, base 64 encode alg    self.url_safe_pem(rpk)\n",
     "        return adata + \"|\" + urlsafe_b64encode(alg) + \"|\" + rpk + \"|\" + f2_ctxt\n",
     "\n",
-    "    def decrypt(self, ctx, sender_name, verfiy_also=True):\n",
-    "        # use static private key for decryption\n",
+    "    def decrypt(self, ctx, sender_name, verify_also=True):\n",
     "        adata, alg, rpk, f2_ctxt = ctx.split('|')\n",
     "        \n",
-    "        rec_priv_key = load_pem_private_key(self.priv_keyring[alg])\n",
+    "        alg = urlsafe_b64decode(alg)\n",
+    "        rpk = load_pem_public_key(rpk, backend=default_backend())\n",
     "        \n",
-    "        # TODO: parse header and decide which algorithm, double check shared key and fernet isntantiations\n",
-    "        shared_key = rec_priv_key.exchange(asym.ec.ECDH(), rpk)\n",
+    "        if alg == \"ecc\":\n",
+    "            key_param = rpk.curve.name[:3] + rpk.curve.name[4:]\n",
+    "#         elif alg == \"rsa\":\n",
     "\n",
-    "        fern = Fernet2(shared_key)\n",
-    "        msg = fern.decrypt(ctx, associated_data=adata)\n",
+    "        # use static private key for decryption\n",
+    "    \n",
+    "        for key in self.priv_keyring:\n",
+    "            if alg in key and key_param in key and 'enc' in key:\n",
+    "                rec_priv_key = load_pem_private_key(bytes(self.priv_keyring[key]), password=None, backend=default_backend())\n",
+    "                break\n",
+    "                \n",
+    "        # TODO: parse header and decide which algorithm, double check shared key and fernet isntantiations\n",
+    "        assert 'rec_priv_key' in locals(), \"Receiver does not have a corresponding {0} private key.\".format(alg + '.' + key_param)\n",
+    "        shared_key = rec_priv_key.exchange(asym.ec.ECDH(), rpk)\n",
+    "        \n",
+    "        \n",
+    "        fern = Fernet2(urlsafe_b64encode(shared_key))\n",
+    "        msg = fern.decrypt(f2_ctxt, associated_data=adata)\n",
     "        \n",
     "        if verify_also:\n",
     "            msg, sig = msg.split('|')\n",
@@ -223,10 +268,10 @@
     "            \n",
     "            for pub_alias in send_pub_keyring:\n",
     "                if alg in pub_alias and \"sig\" in pub_alias:\n",
-    "                    send_pub_key = load_pem_public_key(send_pub_keyring[pub_alias], backend=default_backend())\n",
+    "                    send_pub_key = load_pem_public_key(bytes(send_pub_keyring[pub_alias]), backend=default_backend())\n",
     "                    \n",
     "            # ASSERT HERE\n",
-    "            send_pub_key.verifier(sig, asym.ec.ECDSA(hashes.SHA256()))\n",
+    "            verifier = send_pub_key.verifier(sig, asym.ec.ECDSA(hashes.SHA256()))\n",
     "            verifier.update(msg)\n",
     "            verifier.verify() # throws error if verify is false\n",
     "            \n",
@@ -269,6 +314,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pf = PKFernet(pr_kr, pu_kr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ew5HsAGMKmQMCirvE-4Hs-ThDpJt8WaCfYIzJg==\n"
+     ]
+    }
+   ],
+   "source": [
+    "ctx = pf.encrypt(\"TESTING 12\", \"dan\", \"ecc.sec224r1.1.enc.pub\", \"ecdsa_with_sha256.secp224r1.1.sig.priv\", \"ADATA\", sign_also=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'TESTING 12'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pf.decrypt(ctx, \"dan\", verify_also = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -278,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -289,37 +386,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'ADATA|ZWNj|-----BEGIN PUBLIC KEY-----\\nME4wEAYHKoZIzj0CAQYFK4EEACEDOgAEUX7Ko8cjwDlLorUre+pEGOus6S1VaSff\\nPafQJZ0arTbhL/PobkFrLQ0XMrx9Zc0m4UoBNI8D+IE=\\n-----END PUBLIC KEY-----\\n|gSewybQhMzuzb0Ej49rdiV0DUcSEjLjgyxVdCCsoLslGjkFKVeFZ5F_-bbN4q6eMXWDzbKB6blaeFa6kq6gkbH9nVabZ8NHVb6sCeC0kdQAluFkJtLSRaapHAZ47vGD9z5hqCmgxH1anLqahfLugx5v3TsLakqzPJk-5IAeKZ4Fk'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wQnroVDav3Zz9UYhEl4L0ELipKyobNuYGniPlw==\n"
+     ]
     }
    ],
    "source": [
-    "pf.encrypt(\"MESSAGE\", \"asheesh_teja\", \"ecc.secp224r1.1.enc.pub\", \"ecdsa_with_sha256.secp224r1.1.sig.priv\", \"ADATA\")"
+    "ctx = pf.encrypt(\"MESSAGE\", \"asheesh_teja\", \"ecc.secp224r1.1.enc.pub\", \"ecdsa_with_sha256.secp224r1.1.sig.priv\", \"ADATA\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Receiver does not have a corresponding ecc.sec224r1 private key.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-002223e04a68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mctx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"asheesh_teja\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverify_also\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-7-c88a42345736>\u001b[0m in \u001b[0;36mdecrypt\u001b[0;34m(self, ctx, sender_name, verify_also)\u001b[0m\n\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m         \u001b[0;31m# TODO: parse header and decide which algorithm, double check shared key and fernet isntantiations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 105\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0;34m'rec_priv_key'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlocals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Receiver does not have a corresponding {0} private key.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malg\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mkey_param\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    106\u001b[0m         \u001b[0mshared_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrec_priv_key\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexchange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0masym\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mECDH\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrpk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Receiver does not have a corresponding ecc.sec224r1 private key."
+     ]
+    }
+   ],
    "source": [
-    "#             asym.rsa.RSAPrivateKeyWithSerialization.private_bytes(encoding, format, encryption_algorithm)\n",
-    "#             private_bytes(encoding, format, encryption_algorithm)\n",
-    "#             asymmetric.rsa.RSAPrivateKeyWithSerialization[source]"
+    "pf.decrypt(ctx, \"asheesh_teja\", verify_also = False)"
    ]
   },
   {
