url_safe_pem fix, unpacking key with extra '|' fix, dynamic signer alg/hash, url_safe implement

--- a/crypto/hw5/pkfernet.ipynb
+++ b/crypto/hw5/pkfernet.ipynb
@@ -48,7 +48,6 @@
     "pr_kr = {    \n",
     "    \"ecc.sec224r1.1.enc.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMGgCAQEEHIy9A0wpj7UR6+9FgGJiBe+FsR714WXFmB2DAiOgBwYFK4EEACGhPAM6\\nAAQ6wymm4zZWmmuAtaOvUd5vTik73HWRhH8SPGC+d5OaY05JGn4TkwWOEocuND0R\\nqPAixpCXusAMxw==\\n-----END EC PRIVATE KEY-----\",\n",
     "    \"ecc.sec224r1.1.sig.priv\": \"-----BEGIN EC PRIVATE KEY-----\\nMGgCAQEEHKDxHuvyYU93h7YxWekVhwfB3CvKvbPGS1YL95+gBwYFK4EEACGhPAM6\\nAARa+QRxUyLy1XrpuPuuqA6rx06XsHlZZl2Yl3+hEG0eGMsHDIQtesVhhrZu6guB\\no/i2yH/0k6Gw9A==\\n-----END EC PRIVATE KEY-----\"\n",
-    "#     \"dsa.1024.1.sig.pub\":\n",
     "}"
    ]
   },
@@ -92,7 +91,7 @@
     "    }, \n",
     "    \"asheesh_teja\": {\n",
     "        \"dsa.1024.1.sig.pub\": \"-----BEGIN PUBLIC KEY-----\\nMIIBtzCCASsGByqGSM44BAEwggEeAoGBAK0wjowa0YhHl_wB8jgfN6sl4HeiCfSf\\nE99DY7McBs7Op9L8qMTQt151fiIcaaQeAOpzUqI6ofk-1iaSK0iKTQ63t9QLl1mz\\nbknp0vMny4IW2PqSkE14OZtqaDzRsWJqKAIb91BdKGyqdFNmRfHddpaPuDNawOge\\ng8yIe6P4QBN1AhUAnbg5PlIuvavIX2g_YIC9uGbm1xkCgYBW93q4kiXqdPki7a5j\\ngYSGD9uul58q6h361gl_BQcTwvf2VJioffL7HqfDS--jmS8_cZCJ3VPeXqUvDCOz\\nLKnwl9Fc3s7xG8Ks0R0PyLp3RikUKWv1CtT6GmS81JrzWvPrgKBWbIrIruddLtvb\\nFKX0l4BHV751QLLU7mmcPbcSFgOBhQACgYEAiKIEcb55nZF-_E38puoOeGqvv2sy\\nTnE9Prek5kpAzqA9Q9VT4m4SmKlFAbE6qC_7IxgQTjoKs301EZSWeA15z6vcnOo-\\nr-N5Z8Gn7qwJDzCL3NJpRhTQgBVL_Xh4xpJS-MM1EoEEqKBem8gCGFM-TGLdrx-K\\nMDbcPF_UfT46rY0=\\n-----END PUBLIC KEY-----\\n\", \n",
-    "        \"ecc.secp224r1.1.enc.pub\": \"-----BEGIN PUBLIC KEY-----\\nME4wEAYHKoZIzj0CAQYFK4EEACEDOgAElFmWnRvIgK53WG088jVdDFhMgvfP7SHS\\nNzPpLe4Y7NdvjawlwfTb5k3eIvT0hTRra431odw19fc=\\n-----END PUBLIC KEY-----\\n\"\n",
+    "        \"ecc.sec224r1.1.enc.pub\": \"-----BEGIN PUBLIC KEY-----\\nME4wEAYHKoZIzj0CAQYFK4EEACEDOgAElFmWnRvIgK53WG088jVdDFhMgvfP7SHS\\nNzPpLe4Y7NdvjawlwfTb5k3eIvT0hTRra431odw19fc=\\n-----END PUBLIC KEY-----\\n\"\n",
     "    }\n",
     "}"
    ]
@@ -106,7 +105,7 @@
    "outputs": [],
    "source": [
     "alg_switcher = {\n",
-    "    \"ecdsa \": asym.ec.ECDSA,\n",
+    "    \"ecdsa\": asym.ec.ECDSA,\n",
     "}\n",
     "\n",
     "curve_switcher = {\n",
@@ -156,13 +155,14 @@
     "        self.priv_keyring = priv_keyring\n",
     "        self.pub_keyrings = public_keyrings\n",
     "    \n",
-    "    def url_safe_pem(self, pem_key):\n",
-    "        key = re.findall(\"KEY-----\\n(.*)==\\n-----END\", pem_key, re.DOTALL)[0]\n",
-    "        key.replace(\"+\", \"-\").replace(\"/\", \"_\")\n",
-    "        return key\n",
-    "    \n",
-    "    def restore_pem(self, url_safe_pem):\n",
-    "        return url_safe_pem.replace(\"-\", \"+\").replace(\"_\", \"/\")\n",
+    "    def url_safe_pem(self, pem_key, restore=False):\n",
+    "        key = re.findall(\"-----BEGIN PUBLIC KEY-----(.*)-----END PUBLIC KEY-----\", pem_key, re.DOTALL)[0]\n",
+    "        if restore:\n",
+    "            key.replace(\"-\", \"+\").replace(\"_\", \"/\")\n",
+    "        else:\n",
+    "            key.replace(\"+\", \"-\").replace(\"/\", \"_\")\n",
+    "        pem_key = \"-----BEGIN PUBLIC KEY-----\" + key + \"-----END PUBLIC KEY-----\"\n",
+    "        return pem_key\n",
     "    \n",
     "    def export_pub_keys(self, key_alias_list=[]):\n",
     "        if not key_alias_list:\n",
@@ -214,32 +214,34 @@
     "        rec_pub_key = load_pem_public_key(bytes(self.pub_keyrings[receiver_name][receiver_enc_pub_key_alias]), backend=default_backend())\n",
     "        ephem_public_key = ephem_priv_key.public_key()\n",
     "        rpk = ephem_public_key.public_bytes(encoding.PEM, public_format.SubjectPublicKeyInfo)\n",
-    "        # TODO: PARSE HEADER TO DECIDE WHICH ALG TO USE HERE\n",
     "        # exchange using ephemeral private key and the receiver's public key   \n",
     "        shared_key = ephem_priv_key.exchange(asym.ec.ECDH(), rec_pub_key)\n",
-    "        \n",
-    "        print urlsafe_b64encode(shared_key)        \n",
-    "        \n",
+    "                \n",
     "        # sign if necessary using static sender's private key\n",
     "        if sign_also:\n",
+    "            hdr_alg, hdr_hash, hdr_key_param, hdr_ver, hdr_usage, hdr_key_type = self.parse_header(sender_sign_header)\n",
+    "            \n",
     "            send_priv_alias = self.header_to_alias(sender_sign_header)\n",
     "            send_priv_key = load_pem_private_key(bytes(self.priv_keyring[send_priv_alias]), password=None, backend=default_backend())\n",
-    "            # TODO: PARSE HEADER TO DECIDE WHICH ALG TO USE HERE\n",
-    "            signer = send_priv_key.signer(asym.ec.ECDSA(hashes.SHA256()))\n",
+    "            \n",
+    "            alg_instance = get_switch_case(alg_switcher, hdr_alg)\n",
+    "            hash_instance = get_switch_case(hash_switcher, hdr_hash)\n",
+    "\n",
+    "            signer = send_priv_key.signer(alg_instance(hash_instance()))\n",
     "            signer.update(msg)\n",
     "            signature = signer.finalize()\n",
     "            msg += \"|\" + signature\n",
     "        \n",
     "        fern = Fernet2(urlsafe_b64encode(shared_key))\n",
-    "        f2_ctxt = fern.encrypt(msg, adata) # MUST DECODE ADATA?\n",
-    "        \n",
-    "        # TODO: MAKE URL SAFE, base 64 encode alg    self.url_safe_pem(rpk)\n",
-    "        return adata + \"|\" + urlsafe_b64encode(alg) + \"|\" + rpk + \"|\" + f2_ctxt\n",
+    "        f2_ctxt = fern.encrypt(msg, adata)\n",
+    "\n",
+    "        return adata + \"|\" + urlsafe_b64encode(alg) + \"|\" + urlsafe_b64encode(self.url_safe_pem(rpk)) + \"|\" + f2_ctxt\n",
     "\n",
     "    def decrypt(self, ctx, sender_name, verify_also=True):\n",
     "        adata, alg, rpk, f2_ctxt = ctx.split('|')\n",
     "        \n",
     "        alg = urlsafe_b64decode(alg)\n",
+    "        rpk = self.url_safe_pem(urlsafe_b64decode(rpk), restore=True)\n",
     "        rpk = load_pem_public_key(rpk, backend=default_backend())\n",
     "        \n",
     "        if alg == \"ecc\":\n",
@@ -262,15 +264,12 @@
     "        msg = fern.decrypt(f2_ctxt, associated_data=adata)\n",
     "        \n",
     "        if verify_also:\n",
-    "            msg, sig = msg.split('|')\n",
-    "            \n",
+    "            msg, sig = msg.split('|', 1)\n",
     "            send_pub_keyring = self.pub_keyrings[sender_name]\n",
     "            \n",
     "            for pub_alias in send_pub_keyring:\n",
     "                if alg in pub_alias and \"sig\" in pub_alias:\n",
     "                    send_pub_key = load_pem_public_key(bytes(send_pub_keyring[pub_alias]), backend=default_backend())\n",
-    "                    \n",
-    "            # ASSERT HERE\n",
     "            verifier = send_pub_key.verifier(sig, asym.ec.ECDSA(hashes.SHA256()))\n",
     "            verifier.update(msg)\n",
     "            verifier.verify() # throws error if verify is false\n",
@@ -329,15 +328,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ew5HsAGMKmQMCirvE-4Hs-ThDpJt8WaCfYIzJg==\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ctx = pf.encrypt(\"TESTING 12\", \"dan\", \"ecc.sec224r1.1.enc.pub\", \"ecdsa_with_sha256.secp224r1.1.sig.priv\", \"ADATA\", sign_also=True)"
    ]
@@ -386,26 +377,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wQnroVDav3Zz9UYhEl4L0ELipKyobNuYGniPlw==\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ctx = pf.encrypt(\"MESSAGE\", \"asheesh_teja\", \"ecc.secp224r1.1.enc.pub\", \"ecdsa_with_sha256.secp224r1.1.sig.priv\", \"ADATA\")"
+    "ctx = pf.encrypt(\"MESSAGE\", \"asheesh_teja\", \"ecc.sec224r1.1.enc.pub\", \"ecdsa_with_sha256.secp224r1.1.sig.priv\", \"ADATA\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -417,8 +400,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-002223e04a68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mctx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"asheesh_teja\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverify_also\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-7-c88a42345736>\u001b[0m in \u001b[0;36mdecrypt\u001b[0;34m(self, ctx, sender_name, verify_also)\u001b[0m\n\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m         \u001b[0;31m# TODO: parse header and decide which algorithm, double check shared key and fernet isntantiations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 105\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0;34m'rec_priv_key'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlocals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Receiver does not have a corresponding {0} private key.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malg\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mkey_param\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    106\u001b[0m         \u001b[0mshared_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrec_priv_key\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexchange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0masym\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mECDH\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrpk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-15-002223e04a68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecrypt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mctx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"asheesh_teja\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverify_also\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-7-76f460ef7e01>\u001b[0m in \u001b[0;36mdecrypt\u001b[0;34m(self, ctx, sender_name, verify_also)\u001b[0m\n\u001b[1;32m    106\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m         \u001b[0;31m# TODO: parse header and decide which algorithm, double check shared key and fernet isntantiations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 108\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0;34m'rec_priv_key'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlocals\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Receiver does not have a corresponding {0} private key.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malg\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'.'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mkey_param\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    109\u001b[0m         \u001b[0mshared_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrec_priv_key\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexchange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0masym\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mECDH\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrpk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAssertionError\u001b[0m: Receiver does not have a corresponding ecc.sec224r1 private key."
      ]
     }
@@ -442,6 +425,18 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
